--- a/src/main/resources/templates/peoplenumber/pulic/html/P_TodayAccount.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/P_TodayAccount.html
@@ -18,7 +18,7 @@
     <style>
         .sela{
             width:70px;
-            font-size: 18px;
+            font-size: 20px;
             text-decoration: white;
             background-color: transparent;
             border: none;
@@ -42,13 +42,13 @@
         </span>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li class="hidden"> <a href=""></a> </li>
-                <li> <a href="http://121.199.21.197:63393/p_main" class="page-scroll">主页</a> </li>
-                <li> <a href="http://121.199.21.197:63393/P_TodayAccount" class="page-scroll" style="color:#0FB9EF;" >人数统计图</a> </li>
+<!--                <li class="hidden"> <a href=""></a> </li>-->
+                <li> <a href="http://121.199.21.197:63393/p_main" class="page-scroll" ><b>主页</b></a> </li>
+                <li> <a href="http://121.199.21.197:63393/P_TodayAccount" class="page-scroll" style="border-bottom: 3px #2086D7 solid;color: #2086D7"><b>人数统计图</b></a> </li>
 <!--                <li> <a href="P_Todayliveness.html" class="page-scroll" >活跃度排行榜</a> </li>-->
-                <li> <a class="page-scroll">用户名：<span id="user">张三</span></a> </li>
                 <li> <a class="page-scroll" ></a> </li>
-                <li> <a class="page-scroll"></a> </li>
+<!--                <li> <a class="page-scroll"></a> </li>-->
+                <li> <a class="page-scroll">用户名：<span id="user">张三</span></a> </li>
                 <li> <a class="page-scroll" href="http://121.199.21.197:63393/Login">退出当前用户</a> </li>
             </ul>
         </div>
@@ -59,7 +59,7 @@
     <div class="container" style="height:100% " >
         <div style="margin-top: 120px;">
             <div id="change">
-                <span id="aa" style="float:left;font-size: 18px;margin-left: 11%;margin-bottom: 60px;">当前是：</span>
+                <span id="aa" style="float:left;color:white;font-size: 20px;margin-left: 11%;margin-bottom: 60px;">当前是：</span>
             </div>
             <div id="bar" style="width: 100%; height: 450px;margin-top: 25px;"></div>
 
