--- a/src/main/resources/templates/peoplenumber/pulic/html/date.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/date.html
@@ -136,9 +136,9 @@
                     <select name="" id="country" class="form-control">
                         <option value="null">请选择</option>
                     </select>
-                    <select name="" id="town" class="form-control">
-                        <option value="null">请选择</option>
-                    </select>
+<!--                    <select name="" id="town" class="form-control">-->
+<!--                        <option value="null">请选择</option>-->
+<!--                    </select>-->
                     <select name="" id="street" class="form-control">
                         <option value="null">请选择</option>
                     </select>
@@ -158,7 +158,7 @@
                 </div>
 
             </div>
-            <button id="search" type="button" class="btn btn-default btn-primary" style="width: 110px;margin-top: 6px;">查询</button>
+            <button id="search" type="button" class="btn btn-default btn-primary" style="width: 110px;">查询</button>
     </form>    </div>
 
     <hr/>
