--- a/src/main/resources/templates/peoplenumber/pulic/html/p_main.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/p_main.html
@@ -30,7 +30,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
         <span class="navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" id="address1"  style="font-size: 30px">
+            <a class="navbar-brand page-scroll" id="address1"  style="font-size: 30px;">
                 天津职业技术师范大学</a>
 
         </span>
@@ -39,12 +39,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden"> <a href=""></a> </li>
-                <li> <a href="p_main.html" class="page-scroll" style="color: #0FB9EF">主页</a> </li>
-                <li> <a href="P_TodayAccount.html" class="page-scroll" >人数统计图</a> </li>
+                <li> <a href="p_main.html" class="page-scroll" style="border-bottom: 3px #2086D7 solid;color: #2086D7"><b>主页</b></a> </li>
+                <li> <a href="P_TodayAccount.html" class="page-scroll" ><b>人数统计图</b></a> </li>
+<!--                <li> <a href="P_TodayAccount.html" class="page-scroll" >人数统计图</a> </li>-->
 <!--                <li> <a href="P_Todayliveness.html" class="page-scroll" >活跃度排行榜</a> </li>-->
                 <li> <a class="page-scroll">用户名：<span id="user">张三</span></a> </li>
-                <li> <a class="page-scroll" ></a> </li>
-                <li> <a class="page-scroll"></a> </li>
+<!--                <li> <a class="page-scroll" ></a> </li>-->
+<!--                <li> <a class="page-scroll"></a> </li>-->
                 <li> <a class="page-scroll" href="http://121.199.21.197:63392/Login">退出当前用户</a> </li>
             </ul>
         </div>
@@ -57,6 +58,7 @@
         <div style="margin-top: 120px;">
             <div style="margin-bottom: 25px;">
                 <div class="row">
+<!--                    <img src="../static/assets/img/green.png" class="logo"/>-->
             <span id="address2" class="form-inline" style="float:left;">sbhscjbjbj</span>
             <select type="text" class="form-control" id="list" >
 <!--                <option>北方</option>-->
@@ -69,11 +71,11 @@
                 <div class="col-xs-8 col-sm-8 text-center">
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
-                            <img class="plane" id="img1" src="../static/assets/img/plane114.jpg" usemap="#Map">
+                            <img class="plane" id="img1" style="height: 430px" src="../static/assets/img/first.jpg" usemap="#Map">
 
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <img class="plane" src="../static/assets/img/plane214.jpg" >
+                            <img class="plane" src="../static/assets/img/second.jpg" >
                         </div>
                     </div>
                 </div>
@@ -85,7 +87,8 @@
         <!--            <div class="intro-heading">We design. We HTML5.<br>-->
         <!--                We WordPress.</div>-->
         <!--            <a href="#services" class="page-scroll btn btn-xl"><i class="fa fa-angle-double-down fa-4x"></i></a> </div>-->
-    </div>
+<!--    </div><div style="height: 35px;width: 100%;"></div>-->
+
 </div>
 </div>
 <!--<script>-->
@@ -131,6 +134,6 @@
 <!--        container.appendChild(light_container);-->
 <!--        document.getElementById('ssx').appendChild(container);-->
 <!--    }-->
-<!--</script>-->
-</body><script src="../static/js/light.js"></script>
+<!--</script>--><script src="../static/js/light.js"></script>
+</body>
 </html>
