--- a/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
@@ -14,7 +14,7 @@
 <style>
     .select{
         height: 30px;
-        width: 48%;
+        width: 32%;
         margin-top: 8px;
     }
     .addr{
@@ -60,9 +60,9 @@
                             <select name="" id="country" class="form-control select">
                                 <option value="null">请选择</option>
                             </select>
-                            <select name="" id="town" class="form-control select">
-                                <option value="null">请选择</option>
-                            </select>
+<!--                            <select name="" id="town" class="form-control select">-->
+<!--                                <option value="null">请选择</option>-->
+<!--                            </select>-->
                             <select name="" id="street" class="form-control select">
                                 <option value="null">请选择</option>
                             </select>
@@ -71,7 +71,7 @@
                                 <input  id="special_address"
                                         list="auto"
                                         placeholder="详细地址"
-                                        style=" margin: 5px;"
+                                        style="margin-top: 5px;width:98%"
                                         value="null"
                                         class="form-control addr"
                                         >
@@ -110,9 +110,9 @@
                             <select name="" id="country1" class="form-control select">
                                 <option value="null">请选择</option>
                             </select>
-                            <select name="" id="town1" class="form-control select">
-                                <option value="null">请选择</option>
-                            </select>
+<!--                            <select name="" id="town1" class="form-control select">-->
+<!--                                <option value="null">请选择</option>-->
+<!--                            </select>-->
                             <select name="" id="street1" class="form-control select">
                                 <option value="null">请选择</option>
                             </select>
@@ -120,7 +120,7 @@
                             <div class="form-group">
                                 <input  id="special_address1"
                                         list="auto1"
-                                        style=" margin: 5px;"
+                                        style="margin-top: 5px;width:98%"
                                         value="null"
                                         class="form-control addr"
                                         placeholder="详细地址">
@@ -136,7 +136,7 @@
                 </div>
             </div>
         </div>
-        <div class="login_ad l_float" id="AdImg" style="height: 577px">
+        <div class="login_ad l_float" id="AdImg" style="height: 535px">
         </div>
     </div>
 
